[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/DebugUI/FlagsPanel.gd" type="Script" id=1]
[ext_resource path="res://UI/DebugUI/FlagPanelEntry.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/SmartScrollContainer.gd" type="Script" id=3]
[ext_resource path="res://UI/DebugUI/FlagEditWindow.tscn" type="PackedScene" id=4]

[node name="FlagsPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 24.0

[node name="LineEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 1213.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "flag filter"

[node name="Button" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 1217.0
margin_right = 1280.0
margin_bottom = 24.0
text = "UPDATE"

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FlagPanelEntry" parent="ScrollContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 116.0

[node name="FlagPanelEntry2" parent="ScrollContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 120.0
margin_right = 1280.0
margin_bottom = 236.0

[node name="FlagPanelEntry3" parent="ScrollContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 240.0
margin_right = 1280.0
margin_bottom = 356.0

[node name="FlagEditWindow" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="visibility_changed" from="." to="." method="_on_FlagsPanel_visibility_changed"]
[connection signal="text_entered" from="ScrollContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="clearDatapackFlag" from="FlagEditWindow" to="." method="_on_FlagEditWindow_clearDatapackFlag"]
[connection signal="clearFlag" from="FlagEditWindow" to="." method="_on_FlagEditWindow_clearFlag"]
[connection signal="setDatapackFlagValue" from="FlagEditWindow" to="." method="_on_FlagEditWindow_setDatapackFlagValue"]
[connection signal="setFlagValue" from="FlagEditWindow" to="." method="_on_FlagEditWindow_setFlagValue"]
